apps/k3s/longhorn/longhorn-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.k3s.zadar.family`) # change to your domain
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: zadar-family-tls # change to your cert name
